# botw-freecam

./: .gitignore  Cargo.toml  LICENSE  README.md  get_version.py
.github/: FUNDING.yml
.github/workflows/: rust.yml
botw-freecam/: Cargo.toml  build.rs
botw-freecam/src/: blender.rs  camera.rs  dolly.rs  globals.rs  interceptor.asm  lib.rs  utils.rs
injector/: Cargo.toml
injector/src/: main.rs
