[package]
authors = ["Sebastián Aedo <sebastian.aedo29@gmail.com>"]
edition = "2018"
name = "botw-freecam"
version = "0.2.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
memory-rs = "0.2.5"
nalgebra-glm = "0.3"
simplelog = "0.8"
termcolor = "1.1"
windows-sys = {version = "0.35", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_XboxController",
  "Win32_System_Console",
]}

[build-dependencies]
cc = "1.0"
winres = "0.1"

[lib]
crate-type = ["cdylib"]
