[package]
name = "injector"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_injector = { git = "https://github.com/etra0/simple_injector" }
memory-rs = { git = "https://github.com/etra0/memory-rs" }