[package]
name = "injector"
version = "0.1.1"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_injector = { git = "https://github.com/etra0/simple_injector" }
memory-rs = "0.2.5"